compro2/array/2D/compiling_error.txt
/Users/javascript/Documents/GitHub/compro-1/compro2/array/2D/MatrixAddition.c:26:21: error: use of undeclared identifier 'm'
for (int c = 0; c < m; c++) {
                    ^
/Users/javascript/Documents/GitHub/compro-1/compro2/array/2D/MatrixAddition.c:27:24: error: use of undeclared identifier 'q'
   for (int d = 0; d < q; d++) {
                       ^
/Users/javascript/Documents/GitHub/compro-1/compro2/array/2D/MatrixAddition.c:28:26: error: use of undeclared identifier 'p'
     for (int k = 0; k < p; k++) {
                         ^
/Users/javascript/Documents/GitHub/compro-1/compro2/array/2D/MatrixAddition.c:32:18: error: use of undeclared identifier 'sum'
     add[c][d] = sum;
                 ^
/Users/javascript/Documents/GitHub/compro-1/compro2/array/2D/MatrixAddition.c:33:6: error: use of undeclared identifier 'sum'
     sum = 0;
     ^
/Users/javascript/Documents/GitHub/compro-1/compro2/array/2D/MatrixAddition.c:49:7: error: use of undeclared identifier 'sum'
      sum[i][j]=val[i][j]+val[i][j];
      ^
6 errors generated.
